--- a/themes/hugo-book/i18n/zh.yaml
+++ b/themes/hugo-book/i18n/zh.yaml
@@ -13,8 +13,5 @@
 - id: bookSearchConfig
   translation: |
     {
-      encode: false,
-      tokenize: function(str) {
-        return str.replace(/([\x00-\x7F] | ' ')/g, '').split('')
-      }
+      split: " "
     }
