feat(users): added users page demo

--- a/i18n/zh-Hans/docusaurus-theme-classic/navbar.json
+++ b/i18n/zh-Hans/docusaurus-theme-classic/navbar.json
@@ -34,5 +34,9 @@
   "item.label.API Reference": {
     "message": "API 参考",
     "description": "Navbar item with label API Reference"
+  },
+  "item.label.Users": {
+    "message": "用户列表",
+    "description": "Navbar item with label Users"
   }
 }
