--- a/i18n/zh-Hans/code.json
+++ b/i18n/zh-Hans/code.json
@@ -309,5 +309,175 @@
   },
   "OceanBase is an enterprise distributed relational database developed by Ant Group.": {
     "message": "OceanBase 是由蚂蚁集团完全自主研发的企业级分布式关系型数据库"
+  },
+  "Who is using": {
+    "message": "谁正在使用"
+  },
+  "Highly Compatible with MySQL": {
+    "message": "Highly Compatible with MySQL"
+  },
+  "Fully compatible with the MySQL protocol, from data types, SQL syntax, to functions/expressions, and the optimizer, OceanBase allows for migration without modifying application code. It supports the MySQL Binlog protocol, seamlessly integrating with the downstream data ecosystem of MySQL.": {
+    "message": "Fully compatible with the MySQL protocol, from data types, SQL syntax, to functions/expressions, and the optimizer, OceanBase allows for migration without modifying application code. It supports the MySQL Binlog protocol, seamlessly integrating with the downstream data ecosystem of MySQL."
+  },
+  "Performant and Scalable \"MySQL\"": {
+    "message": "Performant and Scalable \"MySQL\""
+  },
+  "Balances the scalability of distributed architecture with the performance benefits of centralized structures. In distributed scenarios, it achieves a TPC-C benchmark of 707 million tpmC, and in single-instance primary-secondary configurations with 4-core specifications, its performance is 1.8 times that of MySQL 8.0, reliably handling critical workloads of any scale.": {
+    "message": "Balances the scalability of distributed architecture with the performance benefits of centralized structures. In distributed scenarios, it achieves a TPC-C benchmark of 707 million tpmC, and in single-instance primary-secondary configurations with 4-core specifications, its performance is 1.8 times that of MySQL 8.0, reliably handling critical workloads of any scale."
+  },
+  "Enhanced Stability and High Availability": {
+    "message": "Enhanced Stability and High Availability"
+  },
+  "Tested and proven with over 1000 users in production systems, it meets the business continuity requirements under stringent conditions. Its distributed form can achieve automatic failure recovery with RPO=0 and RTO<8s, while single-instance primary-secondary configurations have a failure switch-over time RTO<3s, minimizing business application latency disruptions to the greatest extent.": {
+    "message": "Tested and proven with over 1000 users in production systems, it meets the business continuity requirements under stringent conditions. Its distributed form can achieve automatic failure recovery with RPO=0 and RTO<8s, while single-instance primary-secondary configurations have a failure switch-over time RTO<3s, minimizing business application latency disruptions to the greatest extent."
+  },
+  "A New Generation Data Architecture for Multi-tenancy": {
+    "message": "A New Generation Data Architecture for Multi-tenancy"
+  },
+  "Natively supports multi-tenant architecture and resource isolation capabilities, allowing a single cluster to serve multiple independent businesses. It provides DBaaS capabilities for typical resource-isolated tenant scenarios such as database integration and SAAS, enhancing resource utilization and greatly simplifying the operational complexity of database infrastructure.": {
+    "message": "Natively supports multi-tenant architecture and resource isolation capabilities, allowing a single cluster to serve multiple independent businesses. It provides DBaaS capabilities for typical resource-isolated tenant scenarios such as database integration and SAAS, enhancing resource utilization and greatly simplifying the operational complexity of database infrastructure."
+  },
+  "Transparent High-Ratio Data Compression": {
+    "message": "Transparent High-Ratio Data Compression"
+  },
+  "Through the LSM-Tree storage engine and advanced data compression technology, it saves up to 70-90% in storage costs, offering superior solutions for historical databases, Hbase, and other large-volume, low-query scenarios.": {
+    "message": "Through the LSM-Tree storage engine and advanced data compression technology, it saves up to 70-90% in storage costs, offering superior solutions for historical databases, Hbase, and other large-volume, low-query scenarios."
+  },
+  "HTAP for Real-Time Data Analytics": {
+    "message": "HTAP for Real-Time Data Analytics"
+  },
+  "Supports both transaction processing and real-time analytics workloads on a single set of data. It does not interfere with critical business processes or incur additional costs, providing fast query analysis capabilities for real-time computing, real-time data warehousing, and other scenarios, accelerating real-time business insights.": {
+    "message": "Supports both transaction processing and real-time analytics workloads on a single set of data. It does not interfere with critical business processes or incur additional costs, providing fast query analysis capabilities for real-time computing, real-time data warehousing, and other scenarios, accelerating real-time business insights."
+  },
+  "theme.SearchBar.label": {
+    "message": "搜索",
+    "description": "The ARIA label and placeholder for search button"
+  },
+  "theme.SearchModal.searchBox.resetButtonTitle": {
+    "message": "清除查询",
+    "description": "The label and ARIA label for search box reset button"
+  },
+  "theme.SearchModal.searchBox.cancelButtonText": {
+    "message": "取消",
+    "description": "The label and ARIA label for search box cancel button"
+  },
+  "theme.SearchModal.startScreen.recentSearchesTitle": {
+    "message": "最近搜索",
+    "description": "The title for recent searches"
+  },
+  "theme.SearchModal.startScreen.noRecentSearchesText": {
+    "message": "没有最近搜索",
+    "description": "The text when no recent searches"
+  },
+  "theme.SearchModal.startScreen.saveRecentSearchButtonTitle": {
+    "message": "保存这个搜索",
+    "description": "The label for save recent search button"
+  },
+  "theme.SearchModal.startScreen.removeRecentSearchButtonTitle": {
+    "message": "从历史记录中删除这个搜索",
+    "description": "The label for remove recent search button"
+  },
+  "theme.SearchModal.startScreen.favoriteSearchesTitle": {
+    "message": "收藏",
+    "description": "The title for favorite searches"
+  },
+  "theme.SearchModal.startScreen.removeFavoriteSearchButtonTitle": {
+    "message": "从收藏列表中删除这个搜索",
+    "description": "The label for remove favorite search button"
+  },
+  "theme.SearchModal.errorScreen.titleText": {
+    "message": "无法获取结果",
+    "description": "The title for error screen of search modal"
+  },
+  "theme.SearchModal.errorScreen.helpText": {
+    "message": "你可能需要检查网络连接。",
+    "description": "The help text for error screen of search modal"
+  },
+  "theme.SearchModal.footer.selectText": {
+    "message": "选中",
+    "description": "The explanatory text of the action for the enter key"
+  },
+  "theme.SearchModal.footer.selectKeyAriaLabel": {
+    "message": "Enter 键",
+    "description": "The ARIA label for the Enter key button that makes the selection"
+  },
+  "theme.SearchModal.footer.navigateText": {
+    "message": "导航",
+    "description": "The explanatory text of the action for the Arrow up and Arrow down key"
+  },
+  "theme.SearchModal.footer.navigateUpKeyAriaLabel": {
+    "message": "向上键",
+    "description": "The ARIA label for the Arrow up key button that makes the navigation"
+  },
+  "theme.SearchModal.footer.navigateDownKeyAriaLabel": {
+    "message": "向下键",
+    "description": "The ARIA label for the Arrow down key button that makes the navigation"
+  },
+  "theme.SearchModal.footer.closeText": {
+    "message": "关闭",
+    "description": "The explanatory text of the action for Escape key"
+  },
+  "theme.SearchModal.footer.closeKeyAriaLabel": {
+    "message": "Esc 键",
+    "description": "The ARIA label for the Escape key button that close the modal"
+  },
+  "theme.SearchModal.footer.searchByText": {
+    "message": "搜索提供",
+    "description": "The text explain that the search is making by Algolia"
+  },
+  "theme.SearchModal.noResultsScreen.noResultsText": {
+    "message": "没有结果：",
+    "description": "The text explains that there are no results for the following search"
+  },
+  "theme.SearchModal.noResultsScreen.suggestedQueryText": {
+    "message": "试试搜索",
+    "description": "The text for the suggested query when no results are found for the following search"
+  },
+  "theme.SearchModal.noResultsScreen.reportMissingResultsText": {
+    "message": "认为这个查询应该有结果？",
+    "description": "The text for the question where the user thinks there are missing results"
+  },
+  "theme.SearchModal.noResultsScreen.reportMissingResultsLinkText": {
+    "message": "请告知我们。",
+    "description": "The text for the link to report missing results"
+  },
+  "theme.SearchModal.placeholder": {
+    "message": "搜索文档",
+    "description": "The placeholder of the input of the DocSearch pop-up modal"
+  },
+  "theme.SearchBar.seeAll": {
+    "message": "查看全部 {count} 个结果"
+  },
+  "theme.SearchPage.documentsFound.plurals": {
+    "message": "找到 {count} 份文件",
+    "description": "Pluralized label for \"{count} documents found\". Use as much plural forms (separated by \"|\") as your language support (see https://www.unicode.org/cldr/cldr-aux/charts/34/supplemental/language_plural_rules.html)"
+  },
+  "theme.SearchPage.existingResultsTitle": {
+    "message": "「{query}」的搜索结果",
+    "description": "The search page title for non-empty query"
+  },
+  "theme.SearchPage.emptyResultsTitle": {
+    "message": "在文档中搜索",
+    "description": "The search page title for empty query"
+  },
+  "theme.SearchPage.inputPlaceholder": {
+    "message": "在此输入搜索字词",
+    "description": "The placeholder for search page input"
+  },
+  "theme.SearchPage.inputLabel": {
+    "message": "搜索",
+    "description": "The ARIA label for search page input"
+  },
+  "theme.SearchPage.algoliaLabel": {
+    "message": "通过 Algolia 搜索",
+    "description": "The ARIA label for Algolia mention"
+  },
+  "theme.SearchPage.noResultsText": {
+    "message": "未找到任何结果",
+    "description": "The paragraph for empty search result"
+  },
+  "theme.SearchPage.fetchingNewResults": {
+    "message": "正在获取新的搜索结果...",
+    "description": "The paragraph for fetching new search results"
   }
 }
